2003-11-20  Jonathan Graehl  <graehl@isi.edu>

	* src/finite.cc: -1 = randomly scale weights (of unlocked arcs)
	after composition uniformly by (0..1]

Wed Nov  5 15:46:03 2003  Jonathan Graehl  <graehl@brahms.isi.edu>

	* src/fst.cc: normalization fix for zero-count tied arcs - count
 	their competititors against their group and set them to their
 	teammates' value

2003-10-16  Jonathan Graehl  <graehl@isi.edu>

	* src/wfstio.cc: fixed bug in one-arc per line output of
	zero-weight arcs (showed up with -t)

Mon Oct 13 15:40:05 2003  Jonathan Graehl  <graehl@brahms.isi.edu>

	* src/train.cc: fixed scaling of relative log-likelihood convergence

2003-09-10  Jonathan Graehl  <graehl@isi.edu>

	* src/compose.cc: fixed bug when -i and -m used together (referencing state names array when -i doesn't name states)

2003-09-08  Jonathan Graehl  <graehl@isi.edu>

	* src/finite.cc: changed default to named-states and made -K
	option enable integer-states

Thu Aug 28 14:15:46 2003  Jonathan Graehl  <graehl@brahms.isi.edu>

	* src/config.h (CONFIG_H): define DOUBLE_PRECISION to use doubles
 	instead of floats (probably 25% more memory would be used in a
 	transducer, and 70% more in training)

Wed Aug 27 17:12:16 2003  Jonathan Graehl  <graehl@brahms.isi.edu>

	* src/train.cc: -o 1.1 scales EM changes, new code to deal with anomoly that EM can worsen perplexity if tied arcs make normalization unstable/nonconvergent (e.g. span.spell.wfst).  related changes in several files.

Tue May 20 17:14:36 2003  Jonathan Graehl  <graehl@enescu.isi.edu>

	* marcu hide-the-transducer changes (if #define MARCU in finite.cc)

2003-03-28  Jonathan Graehl  <graehl@isi.edu>

	* src/wfstio.cc: added option (-K) to force state names, otherwise
	assume if finalstate is an integer, that states are unnamed
	(non-sparse integer indices)

	* src/strhash.h: fixed STRINGPOOL, added named_states flag
	(stateName not thread-safe if unnamed states)

2003-03-27  Jonathan Graehl  <graehl@isi.edu>
