@@ -1,3 +1,7 @@
+2003-12-11  Jonathan Graehl  <graehl@isi.edu>
+
+	* src/finite.cc: -! n = random training restarts
+
 2003-11-20  Jonathan Graehl  <graehl@isi.edu>
 
 	* src/finite.cc: -1 = randomly scale weights (of unlocked arcs)
